# m0ss

./: CMakeLists.txt  README.md
include/: m0ss.hpp
src/: CMakeLists.txt  m0ss.cpp
tests/: CMakeLists.txt  m0ss_test.cpp
